--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,9 @@
   --white: hsl(0, 0%, 100%);
   --blackforbg: hsl(0, 0%, 0%);
 }
-* {
+*,
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -42,6 +44,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .navbar-hamburger-lines {
@@ -87,4 +90,49 @@ header {
 #avatar {
   position: relative;
   bottom: 20%;
+}
+
+.carousel {
+  height: 288px;
+  position: relative;
+}
+.slide {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: 200ms opacity ease-in-out;
+  transition-delay: 200ms;
+}
+.slide > img {
+  width: 100%;
+  height: 18em;
+  object-fit: cover;
+}
+.slide[data-active-picture] {
+  opacity: 1;
+  transition-delay: 0ms;
+}
+.carouselbtn {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  margin: 0 1.5em;
+}
+
+.carouselbtn-next {
+  background-image: url(/images/nextbtn.png);
+  background-position: center;
+  right: 0;
+  background-size: cover;
+}
+.carouselbtn-prev {
+  background-image: url(/images/previousbtn.png);
+  background-position: center;
+  background-size: cover;
 }
