--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,18 @@
   margin: 0;
   box-sizing: border-box;
 }
+.background-color-fx {
+  height: 100%;
+  overflow: hidden;
+}
+.background-color-fx::before {
+  content: "";
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3;
+}
 
 .attribution {
   font-size: 11px;
@@ -34,7 +46,44 @@ header {
   padding: 1em 1em;
   margin-left: 0.5em;
 }
+.navbarcontainer {
+  background-color: white;
+  position: absolute;
+  width: 65%;
+  height: 100vh;
+  right: 100%;
+  top: 0;
+  z-index: 3;
+  font-family: var(--mfont);
+  font-weight: 700;
+  font-size: 1.2rem;
+  transition: 200ms ease-in-out;
+}
+.navbarcontainer ul {
+  list-style: none;
+  margin: 3em 1.3em;
+  line-height: 2.5em;
+}
 
+/*Open state of navbar button and navbar container*/
+.open-state-btn > .navbar-hamburger-lines {
+  transform: translateX(-50px);
+  background: none;
+  transition: 200ms ease-in-out;
+}
+.open-state-btn > .navbar-hamburger-lines::before {
+  transition: 200ms ease-in-out;
+  transform: rotate(45deg) translate(35px, -35px);
+}
+.open-state-btn > .navbar-hamburger-lines::after {
+  transition: 200ms ease-in-out;
+  transform: rotate(-45deg) translate(35px, 35px);
+}
+.open-state {
+  transition: 200ms ease-in-out;
+  right: 35%;
+}
+/* ------------- */
 .navbar-hamburger {
   position: relative;
   left: 8%;
@@ -45,12 +94,14 @@ header {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  z-index: 5;
 }
 
 .navbar-hamburger-lines {
   width: 100%;
   height: 0.25em;
   background-color: var(--dgrayblue);
+  transition: 200ms ease-in-out;
 }
 
 .navbar-hamburger-lines::before,
@@ -60,6 +111,7 @@ header {
   width: 100%;
   height: 4px;
   background-color: var(--dgrayblue);
+  transition: 200ms ease-in-out;
 }
 
 .navbar-hamburger-lines::before {
@@ -86,10 +138,93 @@ header {
 #cart {
   margin-right: 1em;
   height: 1.2em;
+  cursor: pointer;
 }
 #avatar {
   position: relative;
   bottom: 20%;
+}
+/*Cart container*/
+.cartcontainer {
+  position: absolute;
+  border-radius: 10px;
+  width: 94%;
+  height: 15em;
+  background-color: white;
+  z-index: 2;
+  top: -300px;
+  left: 3%;
+  transition: 200ms ease-in-out;
+}
+.cartcontainer > h1 {
+  font-family: var(--mfont);
+  font-size: clamp(1rem, 5vw, 1rem);
+  padding: 1.5em 1.5em;
+  padding-bottom: 2.5em;
+  width: 100%;
+  height: 20%;
+  border-bottom: 1px rgba(128, 128, 128, 0.137) solid;
+}
+/*Cart show state*/
+.cart-show-state {
+  top: 4.5em;
+}
+/*----*/
+.itemcontainer {
+  width: 100%;
+  height: 65%;
+  font-family: var(--mfont);
+}
+.itemcontainer > p {
+  font-weight: 700;
+  color: var(--dgrayblue);
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
+}
+.items {
+  margin: 1.5em 0em;
+  padding: 0 1.5em;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  visibility: hidden;
+}
+.items > img {
+  border-radius: 5px;
+  width: 15%;
+}
+.itemstext {
+  color: var(--dgrayblue);
+  font-weight: 400;
+  margin: 0 1em;
+}
+#totalprice {
+  font-weight: 700;
+  color: var(--blackforbg);
+}
+#discardbtn {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+.checkoutbtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+.checkoutbtn > h1 {
+  text-align: center;
+  width: 90%;
+  background-color: var(--orange);
+  border-radius: 8px;
+  font-size: clamp(1rem, 4vw, 1.5rem);
+  color: white;
+  padding: 0.8em;
+  cursor: pointer;
 }
 
 .carousel {
@@ -107,6 +242,7 @@ header {
   width: 100%;
   height: 18em;
   object-fit: cover;
+  object-position: top;
 }
 .slide[data-active-picture] {
   opacity: 1;
@@ -127,12 +263,117 @@ header {
 
 .carouselbtn-next {
   background-image: url(/images/nextbtn.png);
-  background-position: center;
   right: 0;
   background-size: cover;
 }
 .carouselbtn-prev {
   background-image: url(/images/previousbtn.png);
-  background-position: center;
   background-size: cover;
+}
+
+/*Text container*/
+.description {
+  margin: 1em 1.5em;
+  font-family: var(--mfont);
+}
+.textcontainer {
+  line-height: 2em;
+}
+.textcontainer > h2 {
+  color: var(--orange);
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: 0.7rem;
+  font-weight: 700;
+}
+.textcontainer > h1 {
+  font-size: clamp(1.5rem, 7vw, 2.5rem);
+  margin-top: 0.2em;
+}
+.textcontainer > p {
+  color: var(--dgrayblue);
+  margin-top: 1em;
+  font-size: clamp(0.8rem, 4vw, 1rem);
+  width: 100%;
+  font-weight: 500;
+  line-height: 1.5em;
+}
+.pricecontainer {
+  display: flex;
+  margin-top: 1.8em;
+}
+.pricecontainer > h1 {
+  font-size: clamp(1.5rem, 7vw, 2.5rem);
+}
+.priceoffpercentage {
+  background-color: var(--porange);
+  color: var(--orange);
+  font-weight: 700;
+  border-radius: 0.3em;
+  margin-left: 1em;
+  margin-top: 0.5em;
+  padding: 0 0.5em;
+  height: 1.5em;
+  position: relative;
+  bottom: 0.2em;
+}
+.priceoffpercentage > span {
+  position: relative;
+  bottom: 4px;
+}
+.pricecontainer > h2 {
+  color: var(--grayishblue);
+  text-decoration: line-through;
+  font-size: clamp(0.8rem, 4vw, 1.5rem);
+  position: relative;
+  left: 33%;
+  top: 0.2em;
+  font-weight: 600;
+}
+/**/
+
+/*Item functions*/
+.additemoptions {
+  background-color: var(--lgrayishblue);
+  border-radius: 10px;
+  padding: 0.5em 1em;
+  margin-top: 1.5em;
+  display: flex;
+  justify-content: space-between;
+}
+.additemoptions > button {
+  color: var(--orange);
+  font-family: var(--mfont);
+  font-weight: 700;
+  font-size: 1.8rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+.additemoptions > span {
+  font-family: var(--mfont);
+  font-weight: 700;
+  margin-top: 0.5em;
+}
+.addcartcontainer {
+  display: flex;
+  justify-content: center;
+  background-color: var(--orange);
+  margin-top: 1em;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  padding: 1em;
+  box-shadow: var(--porange) 0px 5px 10px 5px;
+}
+.addcartcontainer > h1 {
+  font-size: clamp(1rem, 4vw, 2rem);
+  font-weight: 600;
+}
+.addcartcontainer > img {
+  width: 5%;
+  height: 100%;
+  margin-right: 1em;
+  position: relative;
+  top: 2px;
 }
