--- a/styles.css
+++ b/styles.css
@@ -743,13 +743,14 @@ header {
 
   #picture-slide-selection > li {
     padding: 0 0.5em;
+    cursor: pointer;
   }
   #picture-slide-selection > li:hover::before {
     content: "";
     position: absolute;
     width: 7em;
     height: 7em;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
   }
 
